--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,6 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  width: 100%;
-  height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,10 +26,10 @@ a:hover {
   color: #535bf2;
 }
 
-html, body {
+body {
+  padding: 0;
+  margin: 0;
   display: flex;
-  place-items: center;
-  width: 100%;
 }
 
 h1 {
