feat: add project responsive end to end

--- a/src/pages/home/Project/Project.css
+++ b/src/pages/home/Project/Project.css
@@ -4,4 +4,8 @@
 
 .alice-carousel__stage-item {
   width: 100% !important;
+
+  @media screen and (max-width: 768px) {
+    margin: 0 -40px;
+  }
 }
