feat: add about mobile and home page fix

--- a/src/pages/home/Feedback/Feedback.css
+++ b/src/pages/home/Feedback/Feedback.css
@@ -1,3 +1,8 @@
 .alice-carousel__wrapper {
   box-shadow: 0 8px 10px 0 #0000001a;
 }
+
+.feedback-non-carousel-wrapper > .feedback-item {
+  flex: 1;
+  max-width: 410px;
+}
