--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "react-alice-carousel/lib/alice-carousel.css";
+@import url("./lib.css");
 
 @tailwind base;
 @tailwind components;
@@ -22,44 +23,4 @@ body {
     @apply w-full;
     @apply h-full;
   }
-}
-
-.alice-carousel {
-  position: relative;
-  width: 100%;
-}
-
-.alice-carousel__prev-btn,
-.alice-carousel__next-btn {
-  padding: 0;
-  display: block;
-  width: 12px;
-  height: 24px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-100%);
-  cursor: pointer;
-}
-
-.alice-carousel__prev-btn {
-  left: 20px;
-}
-
-.alice-carousel__next-btn {
-  right: 20px;
-}
-
-.alice-carousel__wrapper {
-  border-radius: 16px;
-}
-
-.alice-carousel__stage {
-  gap: 10px;
-  display: flex;
-}
-
-.alice-carousel__stage-item {
-  flex: 1 0 auto;
-  width: 100% !important;
-  height: auto !important;
 }
