feat: add privacy policy page and refactor add section dynamic logic

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   font-family: Poppins, sans-serif;
 }
 
+input[type="file"]::-webkit-file-upload-button {
+  cursor: pointer;
+}
+
 body {
   @apply m-0;
   @apply p-0;
