--- a/src/shared/gradient/styles.module.css
+++ b/src/shared/gradient/styles.module.css
@@ -57,7 +57,7 @@
   left: 0;
 
   .gradientsContainer {
-    filter: url(#goo) blur(40px);
+    filter: saturate(180%) contrast(90%) blur(40px);
     width: 100%;
     height: 100%;
   }
