--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,19 @@ body {
   @apply overflow-x-hidden;
 }
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 .svg-wrapper {
   > svg {
     @apply h-full;
