--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,11 @@ body {
     @apply h-full;
   }
 }
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
