--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 :root {
   font-family: Poppins, sans-serif;
+  touch-action: manipulation;
 }
 
 input[type="file"]::-webkit-file-upload-button {
