--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import "react-alice-carousel/lib/alice-carousel.css";
 @import url("./lib.css");
 
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind base;
 
 :root {
   font-family: Poppins, sans-serif;
@@ -48,4 +48,27 @@ body {
 .scrollbar-hide {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+/* Reset specific styles */
+.html-preview h1,
+.html-preview h2,
+.html-preview h3,
+.html-preview h4,
+.html-preview h5,
+.html-preview h6,
+.html-preview ul,
+.html-preview li,
+.html-preview span,
+.html-preview div,
+.html-preview a,
+.html-preview dl,
+.html-preview dt,
+.html-preview hr,
+.html-preview figure,
+.html-preview pre,
+.html-preview p {
+  list-style: initial;
+  padding: initial;
+  color: initial !important; /* Prevent color inheritance from Tailwind */
 }
